• tryuing to fix the issue of white text on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -23,6 +23,7 @@ a:hover {
 }
 
 body {
+  color: black;
   margin: 0;
   display: flex;
   place-items: center;
